--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: #300766;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  color: rgb(0, 0, 0);
+}
+.Container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  box-sizing: border-box;
+  box-shadow: 8px 10px #222222;
+  border: 15px solid rgb(255, 255, 255);
+  padding: 10px;
+  margin: 20px
+  
+ 
+}
+
+.clear{
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  color: white;
+  padding: 15px 100px;
+  background-color: #320b64;
+  border: none;
+  transition-duration: 0.4s;
+
+}
+.clear:hover{
+  background-color: #4b2e9b; 
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.person{
+  font-size: 20px;
+  
+}
+.p1{
+  font-size: 16px;
+  color: rgb(80, 79, 79);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img{
+  height: 40px;
+  float: left;
+  border-radius: 50%;
+
+}
+.h5{
+  font-size: 26px;
 }
